--- a/css/style.css
+++ b/css/style.css
@@ -123,7 +123,6 @@ main img {
     color: white;
     text-transform: uppercase;
     text-align: center;
-    width: 100vw;
 }
 
 section {
@@ -251,6 +250,7 @@ footer span a img:hover {
     #hero_text {
         padding-block: 25px;
         font-size: 1.5em;
+        width: 100%;
     }
     #hero_text h1 {
         width: 750px;
