--- a/css/index.css
+++ b/css/index.css
@@ -45,6 +45,12 @@
     padding: 10px;
 }
 
+.text {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .slideshow {
     aspect-ratio: 1/1;
     padding: 15px;
@@ -214,11 +220,17 @@
     .tile {
         aspect-ratio: 4/3;
     }
+    .text {
+        margin-bottom: 0px;
+    }
 }
 
 @media (min-width: 750px) {
     .tile {
         aspect-ratio: 3/2;
+    }
+    .text {
+        margin-bottom: 50px;
     }
 }
 
