--- a/css/code.css
+++ b/css/code.css
@@ -1,16 +1,55 @@
+:root {
+    --comment: green;
+    --module: indianred;
+    --string: yellowgreen;
+    --function: darkslateblue;
+    --variable: cadetblue;
+  }
+
 code {
     text-wrap: wrap;
+}
+
+.copyIcon {
+    height: 25px;
+    width: 25px;
+    padding: 5px;
+    /* background-image: url(/img/icons/copy.png); */
+    background-size: cover;
+    position: absolute;
+    top: 0;
+    right: 0;
+    cursor: pointer;
+    display: none;
+    border-radius: 5px 15px 5px 5px;
+}
+
+.copyIcon:hover {
+    background-color: rgba(255,168,0, 0.25);
+}
+
+div.highlighter-rouge:hover .copyIcon {
+    display: block;
+}
+
+div.highlighter-rouge {
+    text-wrap: wrap;
     color: unset;
+    padding: 15px;
+    border-radius: 15px;
+    border: solid 1px rgba(128, 128, 128, 0.5);
+    position: relative;
 }
 
 code.highlighter-rouge {
+    text-wrap: wrap;
     background-color: rgba(255,168,0, 0.25);
 }
 
 /* html section */
 
 .language-html code span.c {
-    color: green;
+    color: var(--comment);
 }
 
 .language-html code span.nt {
@@ -18,9 +57,29 @@ code.highlighter-rouge {
 }
 
 .language-html code span.na {
-    color: cadetblue;
+    color: var(--variable);
 }
 
 .language-html code span.s {
-    color: yellowgreen;
+    color: var(--string);
 }
+
+/* python section */
+
+.language-python code span.c1 {
+    color: var(--comment);
+}
+
+.language-python code span.kn, .language-python code span.k {
+    color: var(--module);
+    font-weight: bold;
+}
+
+.language-python code span.s, .language-python code span.sh {
+    color: var(--string);
+}
+
+.language-python code span.nf {
+    color: var(--function);
+}
+
