--- a/css/blog.css
+++ b/css/blog.css
@@ -91,23 +91,38 @@ main section a {
 }
 
 main section ul {
-    padding: 0;
-    list-style-type: none;
+    border: solid 1px rgba(128, 128, 128, 0.75);
+    padding: 10px;
+    background-color: rgba(255, 168, 0, 0.25);
+    border-radius: 15px;
     overflow: hidden;
 }
 
 main section ul li {
-    padding: 10px;
-    border-bottom: solid 1px black;
+    padding: 5px;
+    list-style-type: none;
     transition: 500ms;
 }
 
-main section ul li:hover {
+main section ul li:not(:first-child) {
+    list-style-type: none;
+    border-bottom: solid 1px black;    
+}
+
+main section ul li:not(:first-child):hover {
     border-bottom: solid 1px #ffa800;
 }
 
+main section ul li:last-child {
+    border-bottom: none;    
+}
+
+main section ul li:last-child:hover {
+    border-bottom: none;
+}
+
 main section ul li a {
-    font-size: 1.2em;
+    font-size: 1em;
     color: black;
     transition: 500ms;
     text-decoration: none;
