Changed accent color, added footnotes

--- a/css/blog.css
+++ b/css/blog.css
@@ -4,9 +4,15 @@ h4 {
     color: black;
 }
 h5 {
-    color: grey;
-    text-align: end;
+    flex: 0;
+    padding: 2px 5px;
+    border-radius: 10px;
+    display: inline;
+    color: white;
+    background-color: var(--accent);
+    text-align: center;
     font-weight: 100;
+    margin-left: auto;
 }
 h6 {
     font-size: 0.8em;
@@ -19,7 +25,7 @@ h6 {
 
 #back_link p {
     text-decoration: underline;
-    color: #ffa800;
+    color: var(--accent);
 }
 
 @property --grad{
@@ -39,7 +45,7 @@ h6 {
 }
 
 .post:hover {
-    border-bottom: solid 1px rgba(255, 168, 0, 0.75);
+    border-bottom: solid 1px var(--accent75);
     --grad:25%;
 }
 
@@ -58,7 +64,7 @@ h6 {
     flex-direction: column;
 }
 
-.thumbnail {
+.post .thumbnail {
     background-size: cover;
     border-radius: 5px;
     height: 100%;
@@ -66,12 +72,12 @@ h6 {
     display: inline-block;
 }
 
-.thumbnail img {
+.post .thumbnail img {
     height: 100%;
 }
 
 #blog_info {
-    color: grey;
+    color: var(--accent);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -81,19 +87,51 @@ h6 {
     display: inline;
 }
 
+.otherArticles {
+    width: 100%;
+    display: flex;
+    gap: 15px;
+}
+
+.otherArticles a {
+    text-decoration: none;
+    flex: 1;
+    width: 200px;
+    aspect-ratio: 1/1;
+}
+
+.otherArticles a .thumbnail {
+    aspect-ratio: 4/2;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 15px;
+}
+
+.otherArticles a .thumbnail img {
+    width: 100%;
+}
+
+.otherArticles a h2 {
+    width: 100%;
+    font-size: 1.25em;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
+
 .blog a {
     text-decoration: none;
 }
 
 main section a {
-    color: #ffa800;
+    color: var(--accent);
     text-decoration: underline;
 }
 
 main section ol#contents {
     border: solid 1px rgba(128, 128, 128, 0.75);
     padding: 10px;
-    background-color: rgba(255, 168, 0, 0.25);
+    background-color: var(--accent25);
     border-radius: 15px;
     overflow: hidden;
 }
@@ -110,7 +148,7 @@ main section ol#contents li:not(:first-child) {
 }
 
 main section ol#contents li:not(:first-child):hover {
-    border-bottom: solid 1px #ffa800;
+    border-bottom: solid 1px var(--accent);
 }
 
 main section ol#contents li:last-child {
@@ -134,7 +172,7 @@ main section ol#contents li a {
 }
 
 main section ol#contents li a:hover {
-    color: #ffa800;
+    color: var(--accent);
     text-decoration: underline;
 }
 
@@ -146,7 +184,7 @@ main section ol#contents li a:hover {
 /* footnotes */
 
 .footnotes ol {
-    background-color: rgba(255, 168, 0, 0.1);
+    background-color: var(--accent10);
     padding-block: 10px;
     border-radius: 5px;
     list-style-position: outside;
