--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ nav a, header div#account_info a {
 }
 
 nav a:hover, header div#account_info a:hover {
-    color: #ffa800;
+    color: var(--accent);
 }
 
 header div#account_info {
@@ -63,7 +63,7 @@ header div#account_info {
 }
 
 #hamburger:hover .bun {
-    background-color: #ffa800;
+    background-color: var(--accent);
 }
 
 #hamburger .bun {
@@ -95,9 +95,9 @@ header div#account_info {
 }
 
 #hamburger_menu a:hover {
-    background-color: rgba(128, 128, 128, 0.75);
-    color: #ffa800;
-    border-bottom: solid 1px rgba(255, 168, 0, 0.75);
+    background-color: rgba(192, 192, 192, 0.75);
+    color: var(--accent);
+    border-bottom: solid 1px var(--accent75);
 }
 
 main img {
