--- a/css/global.css
+++ b/css/global.css
@@ -16,7 +16,70 @@
     --accent10: rgba(var(--rgb_value), 0.1);
 }
 
+.inlineImage10 {
+    /* display: inline-block; */
+    margin: 10px 20px;
+    height: 200px;
+    float: right;
+    img {
+        height: 100%;
+    }
+}
+
 .reduceImage50 {
     width: 50%;
     margin: auto;
+}
+
+
+@media (max-width: 320px) {
+    .inlineImage10 {
+        display: block;
+        margin: 10px auto;
+        width: 100%;
+        height: auto;
+        
+        img {
+            width: 100%;
+        }
+    }
+    .reduceImage50 {
+        width: 100%;
+    }
+}
+
+@media (min-width: 320px) {
+    .inlineImage10 {
+        /* display: block; */
+        margin: 10px auto;
+        width: 100%;
+        height: auto;
+        
+        img {
+            width: 100%;
+        }
+    }
+
+    .reduceImage50 {
+        width: 100%;
+    }
+}
+
+@media (min-width: 750px) {
+    .inlineImage10 {
+        /* display: inline-block; */
+        margin: 10px 20px;
+        height: 200px;
+        width: auto;
+        float: right;
+        img {
+            width: auto;
+            height: 100%;
+        }
+    }
+
+    .reduceImage50 {
+        width: 50%;
+        margin: auto;
+    }
 }
