--- a/css/blog.css
+++ b/css/blog.css
@@ -66,14 +66,11 @@ h6 {
 
 .post .thumbnail {
     background-size: cover;
+    background-position: center;
     border-radius: 5px;
     height: 100%;
     aspect-ratio: 4/3;
     display: inline-block;
-}
-
-.post .thumbnail img {
-    height: 100%;
 }
 
 #blog_info {
@@ -189,6 +186,15 @@ main section ol#contents li a {
 main section ol#contents li a:hover {
     color: var(--accent);
     text-decoration: underline;
+}
+
+/* blockquote */
+
+blockquote {
+    padding: 15px;
+    border-radius: 5px;
+    /* background-color: var(--accent10); */
+    border: solid 1px var(--accent50);
 }
 
 /* footnotes */
