--- a/css/index.css
+++ b/css/index.css
@@ -191,6 +191,7 @@ section a img {
     width: 100%;
     height: 100%;
     background-size: cover;
+    background-position: center;
     filter: brightness(0.5);
     transition: scale 500ms;
 }
