--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@ header div#account_info a {
     height: 100%;
     background-image: url(../img/hero.jpg);
     background-size: cover;
+    background-position: center top;
     filter: brightness(0.5);
 }
 
