--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,10 @@ nav, header div#account_info {
     gap: 25px;
 }
 
+header div#account_info a img {
+    height: 35px;
+}
+
 nav a, header div#account_info a {
     color: white;
     transition: 500ms;
@@ -80,6 +84,30 @@ header div#account_info {
     width: 100%;
     display: block;
     border-radius: 2.5px;
+}
+
+#account_menu {
+    overflow: hidden;
+    display: none;
+    flex-direction: column;
+    position: absolute;
+    right: 0;
+    top: 50px;
+    text-align: end;
+    border-radius: 0px 0px 5px 5px;
+    padding-bottom: 10px;
+    background-color: rgba(0, 0, 0, 0.5);
+    a {
+        border-bottom: solid 1px rgba(255, 255, 255, 0.75);
+        color: white;
+        padding: 10px 20px 10px 100px;
+        transition: color 500ms, background-color 500ms, border-bottom 500ms;
+    }
+    a:hover {
+        background-color: rgba(192, 192, 192, 0.25);
+        color: var(--accent);
+        border-bottom: solid 1px var(--accent75);
+    }
 }
 
 #hamburger_menu {
