--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,10 @@ header #logo img {
 }
 
 
+a.hyper {
+    color: var(--accent);
+    text-decoration: underline;
+}
 
 .slim {
     z-index: 10;
@@ -301,14 +305,12 @@ footer span a img:hover {
     }
     
     button {
-        padding-block: 10px;
         font-size: 1em;
         border-radius: 5px;
         margin-block: 15px;
-        margin-inline: auto;
         display: block;
         border: none;
-        width: 100%;
+        width: calc(100% - 20px);
         cursor: pointer;
         transition: 500ms;
         div {
@@ -349,6 +351,7 @@ footer span a img:hover {
         border: solid 1px rgba(192, 192, 192, 0.75);
     }
     button.social-login {
+        padding: 10px;
         color: white;
         display: flex;
         align-items: center;
@@ -380,6 +383,22 @@ footer span a img:hover {
       ::-ms-input-placeholder { /* Edge 12 -18 */
         color: rgba(192, 192, 192, 0.5);
       }
+}
+
+em {
+    background-color: rgba(255, 0, 0, 0.75);
+    width: calc(100% - 20px);
+    margin-block: 20px;
+    border-radius: 5px;
+    border: solid 1px white;
+    text-align: start;
+    display: none;
+    h4 {
+        text-align: start;
+        margin: 10px;
+        font-style: normal;
+        font-weight: normal;
+    }
 }
 
 
